src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
struct all_addr {
    union {
        struct in_addr addr4;
#ifdef HAVE_IPV6
        struct in6_addr addr6;
#endif
        /* for log_query */
        struct {
            uint16_t keytag, algo, digest;
        } log;
        /* for log_query */
        struct {
            uint32_t rcode;
        } rcode;
        /* for cache_insert of DNSKEY, DS */
        struct {
            uint16_t _class, type;
        } dnssec;
    } addr;
};
struct naptr {
    char* name, * replace, * regexp, * services, * flags;
    uint32_t order, pref;
    struct naptr* next;
};
struct txt_record {
    char* name;
    unsigned char* txt;
    uint16_t _class, len;
    int stat;
    struct txt_record* next;
};
struct cname {
    int ttl, flag;
    char* alias, * target;
    struct cname* next, * targetp;
};
struct addrlist {
    struct all_addr addr;
    int flags, prefixlen;
    struct addrlist* next;
};
struct interface_name {
    char* name; /* domain name */
    char* intr; /* interface name */
    int family; /* AF_INET, AF_INET6 or zero for both */
    struct addrlist* addr;
    struct interface_name* next;
};
union bigname {
    char name[MAXDNAME];
    union bigname* next; /* freelist */
};
struct blockdata {
    struct blockdata* next;
    unsigned char key[KEYBLOCK_LEN];
};
struct crec {
    struct crec* hash_next;
    struct crec* prev;
    struct crec* next;
    /* union is 16 bytes when doing IPv6, 8 bytes on 32 bit machines without IPv6 */
    union {
        struct all_addr addr;
        struct {
            union {
                struct crec* cache;
                struct interface_name* int_name;
            } target;
            uint32_t uid; /* 0 if union is interface-name */
        } cname;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, flags, keytag;
            unsigned char algo;
        } key;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, keytag;
            unsigned char algo;
            unsigned char digest;
        } ds;
    } addr;
    time_t ttd; /* time to die */
    /* used as class if DNSKEY/DS, index to source for F_HOSTS */
    uint32_t uid;
    uint16_t flags;
    union {
        char sname[SMALLDNAME];
        union bigname* bname;
        char* namep;
    } name;
};
/* struct sockaddr is not large enough to hold any address,
   and specifically not big enough to hold an IPv6 address.
   Blech. Roll our own. */
union mysockaddr {
    struct sockaddr sa;
    struct sockaddr_in in;
#if defined(HAVE_IPV6)
    struct sockaddr_in6 in6;
#endif
};
struct ServerFd {
    int fd;
    union mysockaddr source_addr;
//    char _interface[IF_NAMESIZE+1];
    std::string _interface;
    uint32_t preallocated;
    uint32_t used;
    uint32_t ifindex;
    struct ServerFd* next;
};
struct server {
    union mysockaddr addr, source_addr;
//    char interface[IF_NAMESIZE+1];
    std::string _interface;
    struct ServerFd* sfd;
    char* domain; /* set if this server only handles a domain. */
    int flags, tcpfd, edns_pktsz;
    time_t pktsz_reduced;
    uint32_t queries, failed_queries;
#ifdef HAVE_LOOP
    uint32_t uid;
#endif
    struct server* next;
};
struct dhcp_netid {
    char* net;
    struct dhcp_netid* next;
};
struct dhcp_netid_list {
    struct dhcp_netid* list;
    struct dhcp_netid_list* next;
};
struct dhcp_opt {
    int opt, len, flags;
    union {
        int encap;
        uint32_t wildcard_mask;
        unsigned char* vendor_class;
    } u;
    unsigned char* val;
    struct dhcp_netid* netid;
    struct dhcp_opt* next;
};
/* vendorclass, userclass, remote-id or circuit-id */
struct dhcp_vendor {
    int len, match_type;
    uint32_t enterprise;
    char* data;
    struct dhcp_netid netid;
    struct dhcp_vendor* next;
};
uint16_t rand16(void);
void* whine_malloc(size_t size);
uint64_t addr6part(struct in6_addr *addr);
void setaddr6part(struct in6_addr *addr, uint64_t host);
int retry_send(ssize_t rc);
int expand_buf(struct iovec* iov, size_t size);
char* print_mac(char* buff, unsigned char* mac, int len);
int wildcard_match(const char* wildcard, const char* match);
int wildcard_matchn(const char* wildcard, const char* match, int num);
/* log.c */
void die(char* message, char* arg1, int exit_code) ATTRIBUTE_NORETURN;
/* network.c */
int indextoname(int fd, int index, char* name);
int iface_check(int family, struct all_addr* addr, char* name, int* auth);
int fix_fd(int fd);
int set_ipv6pktinfo(int fd);
void lease_ping_reply(struct in6_addr *sender, unsigned char *packet, char *interface);
/* bpf.c or netlink.c */
int iface_enumerate(int family, void* parm, int (callback)());
ssize_t recv_dhcp_packet(int fd, struct msghdr* msg);
struct dhcp_netid* option_filter(struct dhcp_netid* tags, struct dhcp_netid* context_tags,
        struct dhcp_opt* opts);
void reset_counter(void);
int save_counter(int newval);
void *expand(size_t headroom);
void *put_opt6(void *data, size_t len);
void put_opt6_long(uint32_t val);
void put_opt6_short(uint32_t val);
void put_opt6_char(uint32_t val);