src/radv-protocol.h

struct ra_packet {
  uint8_t type, code;
  uint16_t checksum;
  uint8_t hop_limit, flags;
  uint16_t lifetime;
  uint32_t reachable_time;
  uint32_t retrans_time;
};
struct prefix_opt {
  uint8_t type, len, prefix_len, flags;
  uint32_t valid_lifetime, preferred_lifetime, reserved;
  struct in6_addr prefix;
};