src/slack.rs


#[derive(Copy, Clone)]
#[repr(C)]
pub struct ifreq2 {
    pub ifr_ifrn: C2RustUnnamed_3,
    pub ifr_ifru: C2RustUnnamed_2,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_297 {
    pub ifru_addr: NetAddress,
    pub ifru_dstaddr: NetAddress,
    pub ifru_broadaddr: NetAddress,
    pub ifru_netmask: NetAddress,
    pub ifru_hwaddr: NetAddress,
    pub ifru_flags: libc::c_short,
    pub ifru_ivalue: i32,
    pub ifru_mtu: i32,
    pub ifru_map: Ifmap,
    pub ifru_slave: [libc::c_char; 16],
    pub ifru_newname: [libc::c_char; 16],
    pub ifru_data: __caddr_t,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_397 {
    pub ifrn_name: [libc::c_char; 16],
}




#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_44 {
    pub keytag: u16,
    pub algo: u16,
    pub digest: u16,
    pub rcode: u16,
}







#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_106 {
    pub sname: [libc::c_char; 50],
    pub bname: &mut bigname,
    pub namep: &mut String,
}





#[derive(Copy, Clone)]
#[repr(C)]
pub struct txt_record {
    pub name: &mut String,
    pub txt: mut Vec<u8>,
    pub class: u16,
    pub len: u16,
    pub stat: i32,
    pub next: &mut txt_record,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_netid_list {
    pub list: &mut dhcp_netid,
    pub next: &mut dhcp_netid_list,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_pxe_vendor {
    pub data: &mut String,
    pub next: &mut dhcp_pxe_vendor,
}











#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_relay {
    pub local: all_addr,
    pub server: all_addr,
    pub interface: &mut String,
    pub iface_index: i32,
    pub current: &mut dhcp_relay,
    pub next: &mut dhcp_relay,
}

#[derive(Copy, Clone)]
#[repr(C)]
pub struct iface_param {
    pub spare: &mut addrlist,
    pub fd: i32,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_128 {
    pub c: mut Vec<u8>,
    pub p: &mut in6_pktinfo,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_134 {
    pub c: mut Vec<u8>,
    pub p: &mut InPktInfo,
}





#[inline]







#[inline]
unsafe extern "C" fn __uint32_identity(mut __x: __uint32_t) -> __uint32_t {
    return __x;
}

extern "C" {





    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;


















    #[no_mangle]
    fn expand_buf(iov: &mut iovec, size: usize) -> i32;
}


















#[derive(Copy, Clone)]
#[repr(C)]
pub union all_addr99 {
    pub addr4: in_addr,
    pub addr6: in6_addr,
    pub cname: C2RustUnnamed_4,
    pub key: C2RustUnnamed_3,
    pub ds: C2RustUnnamed_2,
    pub srv: C2RustUnnamed_1,
    pub log: C2RustUnnamed_0,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_099 {
    pub keytag: u16,
    pub algo: u16,
    pub digest: u16,
    pub rcode: u16,
}


#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_296 {
    pub keydata: &mut blockdata,
    pub keylen: u16,
    pub keytag: u16,
    pub algo: libc::c_uchar,
    pub digest: libc::c_uchar,
}

#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_45 {
    pub target: C2RustUnnamed_5,
    pub uid: u32,
    pub is_name_ptr: i32,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_598 {
    pub cache: &mut crec,
    pub name: &mut String,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct crec98 {
    pub next: &mut crec,
    pub prev: &mut crec,
    pub hash_next: &mut crec,
    pub addr: all_addr,
    pub ttd: time::Instant,
    pub uid: u32,
    pub flags: u32,
    pub name: C2RustUnnamed_6,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_697 {
    pub sname: [libc::c_char; 50],
    pub bname: &mut bigname,
    pub namep: &mut String,
}




#[derive(Copy, Clone)]
#[repr(C)]
pub struct naptr {
    pub name: &mut String,
    pub replace: &mut String,
    pub regexp: &mut String,
    pub services: &mut String,
    pub flags: &mut String,
    pub order: u32,
    pub pref: u32,
    pub next: &mut naptr,
}






















#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_netid {
    pub net: &mut String,
    pub next: &mut dhcp_netid,
}





#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_opt99 {
    pub opt: i32,
    pub len: i32,
    pub flags: i32,
    pub u: C2RustUnnamed_7,
    pub val: mut Vec<u8>,
    pub netid: &mut dhcp_netid,
    pub next: &mut dhcp_opt,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_78 {
    pub encap: i32,
    pub wildcard_mask: u32,
    pub vendor_class: mut Vec<u8>,
}



#[derive(Copy, Clone)]
#[repr(C)]
pub struct dhcp_vendor {
    pub len: i32,
    pub match_type: i32,
    pub enterprise: u32,
    pub data: &mut String,
    pub netid: dhcp_netid,
    pub next: &mut dhcp_vendor,
}











#[derive(Copy, Clone)]
#[repr(C)]
pub struct tftp_prefix {
    pub interface: &mut String,
    pub prefix: &mut String,
    pub missing: i32,
    pub next: &mut tftp_prefix,
}









#[inline]











#[inline]
unsafe extern "C" fn feof_unlocked(mut __stream: &mut FILE) -> i32 {
    return (__stream._flags & 0x10 != 0)  libc::c_int;
}

#[inline]
unsafe extern "C" fn tolower(mut __c: i32) -> i32 {
    return if __c >= -(128) && __c < 256 {
        *(*__ctype_tolower_loc()).offset(__c)
    } else { __c };
}
#[inline]
unsafe extern "C" fn toupper(mut __c: i32) -> i32 {
    return if __c >= -(128) && __c < 256 {
        *(*__ctype_toupper_loc()).offset(__c)
    } else { __c };
}

#[inline]
unsafe extern "C" fn strtoimax(mut nptr: *const libc::c_char,
                               mut endptr: String,
                               mut base: i32) -> intmax_t {
    return __strtol_internal(nptr, endptr, base, 0);
}
#[inline]
unsafe extern "C" fn strtoumax(mut nptr: *const libc::c_char,
                               mut endptr: String,
                               mut base: i32) -> uintmax_t {
    return __strtoul_internal(nptr, endptr, base, 0);
}




extern "C" {




    #[no_mangle]
    fn poll(__fds: &mut pollfd, __nfds: nfds_t, __timeout: i32)
            -> i32;
    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memmove(_:Vec<u8>, _: *const libc::c_void, _: u32)
               ->Vec<u8>;











    #[no_mangle]
    fn free(__ptr:Vec<u8>);






    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;
}


pub type nfds_t = libc::c_ulong;
#[derive(Copy, Clone)]
#[repr(C)]
pub struct pollfd {
    pub fd: i32,
    pub events: libc::c_short,
    pub revents: libc::c_short,
}








#[inline]
unsafe extern "C" fn putchar(mut __c: i32) -> i32 {
    return putc(__c, stdout);
}








#[inline]






#[inline]
unsafe extern "C" fn putc_unlocked(mut __c: i32,
                                   mut __stream: &mut FILE) -> i32 {
    return if (__stream._IO_write_ptr >= __stream._IO_write_end)  libc::c_int != 0 {
        __overflow(__stream, __c)
    } else {
        let fresh4 = __stream._IO_write_ptr;
        __stream._IO_write_ptr =
            __stream._IO_write_ptr.offset(1);
        *fresh4 = __c;
        *fresh4
    };
}








extern "C" {



    #[no_mangle]
    fn fopen(_: *const libc::c_char, _: *const libc::c_char) -> FILE;




    #[no_mangle]
    fn fgets(__s: &mut String, __n: i32, __stream:  &mut FILE)
             -> &mut String;

    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn inet_pton(__af: i32, __cp: *const libc::c_char,
                 __buf:Vec<u8>) -> i32;




    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn if_nametoindex(__ifname: *const libc::c_char) -> libc::c_uint;
    #[no_mangle]
    fn if_indextoname(__ifindex: u32, __ifname: &mut String)
                      -> &mut String;





    #[no_mangle]
    fn free(__ptr:Vec<u8>);


    #[no_mangle]
    fn difftime(__time1: time::Instant, __time0: time::Instant) -> libc::c_double;





    #[no_mangle]
    fn rand16() -> u16;
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;

    #[no_mangle]
    fn addr6part(addr:  &mut in6_addr)  -> u64_0;
    #[no_mangle]
    fn setaddr6part(addr: &mut in6_addr, host: u64_0);
    #[no_mangle]
    fn retry_send(rc: ssize_t) -> i32;
    #[no_mangle]
    fn expand_buf(iov: &mut iovec, size: usize) -> i32;
    #[no_mangle]
    fn print_mac(buff: &mut String, mac: mut Vec<u8>,
                 len: i32) -> &mut String;
    #[no_mangle]
    fn wildcard_match(wildcard: *const libc::c_char,
                      match_0: *const libc::c_char) -> i32;
    #[no_mangle]
    fn wildcard_matchn(wildcard: *const libc::c_char,
                       match_0: *const libc::c_char, num: i32)
                       -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn indextoname(fd: i32, index: i32,
                   name: &mut String) -> i32;
    #[no_mangle]
    fn iface_check(family: i32, addr: &mut all_addr,
                   name: &mut String, auth: )
                   -> i32;
    #[no_mangle]
    fn fix_fd(fd: i32) -> i32;
    #[no_mangle]
    fn set_ipv6pktinfo(fd: i32) -> i32;
    #[no_mangle]
    fn lease_ping_reply(sender: &mut in6_addr, packet: mut Vec<u8>,
                        interface: &mut String);
    #[no_mangle]
    fn iface_enumerate(family: i32, parm:Vec<u8>,
                       callback:
                       Option<unsafe extern "C" fn() -> i32>)
                       -> i32;
    #[no_mangle]
    fn recv_dhcp_packet(fd: i32, msg:  &mut msghdr)  -> ssize_t;
    #[no_mangle]
    fn option_filter(tags: &mut dhcp_netid, context_tags: &mut dhcp_netid,
                     opts:  &mut dhcp_opt)  -> dhcp_netid;
    #[no_mangle]
    fn reset_counter();
    #[no_mangle]
    fn save_counter(newval: i32) -> i32;
    #[no_mangle]
    fn expand(headroom: usize) ->Vec<u8>;
    #[no_mangle]
    fn put_opt6(data:Vec<u8>, len: usize) ->Vec<u8>;
    #[no_mangle]
    fn put_opt6_long(val: u32);
    #[no_mangle]
    fn put_opt6_short(val: u32);
    #[no_mangle]
    fn put_opt6_char(val: u32);
    #[no_mangle]
    fn setsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval: *const libc::c_void,
                  __optlen: socklen_t) -> i32;
    #[no_mangle]
    fn getsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval:Vec<u8>,
                  __optlen:  &mut socklen_t)  -> i32;
    #[no_mangle]
    fn sendto(__fd: i32, __buf: *const libc::c_void, __n: usize,
              __flags: i32, __addr: __CONST_NetAddress_ARG,
              __addr_len: socklen_t) -> ssize_t;
}
























// pub const IPPROTO_MH: C2RustUnnamed_1 = 135;
// pub const IPPROTO_DSTOPTS: C2RustUnnamed_1 = 60;
// pub const IPPROTO_NONE: C2RustUnnamed_1 = 59;
// pub const IPPROTO_ICMPV6: C2RustUnnamed_1 = 58;
// pub const IPPROTO_FRAGMENT: C2RustUnnamed_1 = 44;
// pub const IPPROTO_ROUTING: C2RustUnnamed_1 = 43;
// pub const IPPROTO_HOPOPTS: C2RustUnnamed_1 = 0;






#[derive(Copy, Clone)]
#[repr(C)]
pub struct ra_packet {
    pub type_0: u8_0,
    pub code: u8_0,
    pub checksum: u16_0,
    pub hop_limit: u8_0,
    pub flags: u8_0,
    pub lifetime: u16_0,
    pub reachable_time: u32_0,
    pub retrans_time: u32_0,
}
#[derive(Copy, Clone)]
#[repr(C)]
pub struct prefix_opt {
    pub type_0: u8_0,
    pub len: u8_0,
    pub prefix_len: u8_0,
    pub flags: u8_0,
    pub valid_lifetime: u32_0,
    pub preferred_lifetime: u32_0,
    pub reserved: u32_0,
    pub prefix: in6_addr,
}

















